tests/ui/pattern/struct-pattern-with-missing-fields-resolve-error.stderr
error: expected `,`
  --> $DIR/struct-pattern-with-missing-fields-resolve-error.rs:12:31
   |
LL |     if let Website { url, Some(title) } = website {
   |            -------            ^
   |            |
   |            while parsing the fields for this pattern

error[E0425]: cannot find value `title` in this scope
  --> $DIR/struct-pattern-with-missing-fields-resolve-error.rs:18:30
   |
LL |     if let Website { url, .. } = website {
   |            ------------------- this pattern doesn't include `title`, which is available in `Website`
LL |         println!("[{}]({})", title, url);
   |                              ^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
